--- a/pos_configurator/views/product_attribute_view.xml
+++ b/pos_configurator/views/product_attribute_view.xml
@@ -6,6 +6,7 @@
         <field name="arch" type="xml">
             <field name="create_variant" position="after">
                 <field name="is_height_width" />
+                <field name="is_qty" />
             </field>
         </field>
     </record>
